[package]
name = "data-backend"
version = "0.1.0"
authors = ["livi <livmaertens@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"

[dependencies.rocket]
version = "0.5.0-rc.1"
features = ["json"]
